Added code for TenantPropertiesManager